tests/cases/device_definition_errors/stderr.rs.txt
error: The device driver input has errors that need to be solved!
    --> device_definition_errors.rs:2372:1
     |
2372 | compile_error!("The device driver input has errors that need to be solved!");
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `MyCustomType` in this scope
    --> device_definition_errors.rs:1352:29
     |
1352 |                      Result<MyCustomType, <MyCustomType as TryFrom<u8>>::Error>
     |                             ^^^^^^^^^^^^ not found in this scope
     |
help: you might be missing a type parameter
     |
1280 |     impl<MyCustomType> Foor9FieldSet {
     |         ++++++++++++++

error[E0412]: cannot find type `MyCustomType` in this scope
    --> device_definition_errors.rs:1352:44
     |
1352 |                      Result<MyCustomType, <MyCustomType as TryFrom<u8>>::Error>
     |                                            ^^^^^^^^^^^^ not found in this scope
     |
help: you might be missing a type parameter
     |
1280 |     impl<MyCustomType> Foor9FieldSet {
     |         ++++++++++++++

error[E0412]: cannot find type `MyCustomType` in this scope
    --> device_definition_errors.rs:1441:29
     |
1441 |                     value:  MyCustomType
     |                             ^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0412`.
error: could not compile `device_definition_errors` (bin "device_definition_errors") due to 4 previous errors
